--- a/package.json
+++ b/package.json
@@ -4,144 +4,143 @@
   "description": "Create server application in Node to serve information to an app in Ionic",
   "main": "index.js",
   "dependencies": {
-    "agent-base": "^6.0.2",
-    "accepts": "^1.3.7",
     "abbrev": "^1.1.1",
+    "accepts": "^1.3.7",
+    "agent-base": "^6.0.2",
     "ansi-regex": "^5.0.1",
     "aproba": "^2.0.0",
+    "are-we-there-yet": "^2.0.0",
     "array-flatten": "^1.1.1",
-    "body-parser": "^1.19.0",
+    "balanced-match": "^1.0.2",
     "base64-js": "^1.5.1",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "brace-expansion": "^1.1.11",
-    "balanced-match": "^1.0.2",
-    "are-we-there-yet": "^2.0.0",
-    "buffer-equal-constant-time": "^1.0.1",
     "bson": "^4.6.0",
     "buffer": "^5.7.1",
+    "buffer-equal-constant-time": "^1.0.1",
+    "busboy": "^0.3.1",
+    "bytes": "^3.1.0",
+    "chownr": "^2.0.0",
     "color-support": "^1.1.3",
+    "concat-map": "^0.0.1",
+    "console-control-strings": "^1.1.0",
     "content-disposition": "^0.5.3",
     "content-type": "^1.0.4",
-    "concat-map": "^0.0.1",
     "cookie": "^0.4.0",
-    "busboy": "^0.3.1",
-    "console-control-strings": "^1.1.0",
-    "chownr": "^2.0.0",
-    "bytes": "^3.1.0",
     "cookie-signature": "^1.0.6",
-    "destroy": "^1.0.4",
-    "delegates": "^1.0.0",
     "cors": "^2.8.5",
     "debug": "^2.6.9",
-    "emoji-regex": "^8.0.0",
-    "ee-first": "^1.1.1",
-    "depd": "^1.1.2",
-    "dicer": "^0.3.0",
+    "delegates": "^1.0.0",
     "denque": "^2.0.1",
+    "depd": "^1.1.2",
+    "destroy": "^1.0.4",
     "detect-libc": "^1.0.3",
-    "encodeurl": "^1.0.2",
-    "etag": "^1.8.1",
+    "dicer": "^0.3.0",
     "ecdsa-sig-formatter": "^1.0.11",
-    "express": "^4.17.1",
+    "ee-first": "^1.1.1",
+    "emoji-regex": "^8.0.0",
+    "encodeurl": "^1.0.2",
     "escape-html": "^1.0.3",
-    "finalhandler": "^1.1.2",
-    "fresh": "^0.5.2",
+    "etag": "^1.8.1",
+    "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
-    "fs.realpath": "^1.0.0",
-    "glob": "^7.2.0",
+    "finalhandler": "^1.1.2",
     "forwarded": "^0.2.0",
-    "gauge": "^4.0.0",
-    "http-errors": "^1.7.2",
+    "fresh": "^0.5.2",
     "fs-minipass": "^2.1.0",
+    "fs.realpath": "^1.0.0",
+    "gauge": "^4.0.0",
+    "glob": "^7.2.0",
     "has-unicode": "^2.0.1",
-    "inherits": "^2.0.3",
-    "ieee754": "^1.2.1",
+    "http-errors": "^1.7.2",
     "https-proxy-agent": "^5.0.0",
     "iconv-lite": "^0.4.24",
-    "is-fullwidth-code-point": "^3.0.0",
-    "jwa": "^1.4.1",
-    "jsonwebtoken": "^8.5.1",
-    "jws": "^3.2.2",
-    "ipaddr.js": "^1.9.1",
+    "ieee754": "^1.2.1",
     "inflight": "^1.0.6",
-    "lodash.isboolean": "^3.0.3",
-    "lodash.isplainobject": "^4.0.6",
-    "lodash.isnumber": "^3.0.3",
-    "lodash.includes": "^4.3.0",
-    "lodash.isinteger": "^4.0.4",
+    "inherits": "^2.0.3",
+    "ipaddr.js": "^1.9.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwa": "^1.4.1",
+    "jws": "^3.2.2",
     "kareem": "^2.3.2",
+    "lodash.includes": "^4.3.0",
+    "lodash.isboolean": "^3.0.3",
+    "lodash.isinteger": "^4.0.4",
+    "lodash.isnumber": "^3.0.3",
+    "lodash.isplainobject": "^4.0.6",
     "lodash.isstring": "^4.0.1",
-    "lru-cache": "^6.0.0",
     "lodash.once": "^4.1.1",
-    "media-typer": "^0.3.0",
-    "mime": "^1.6.0",
+    "lru-cache": "^6.0.0",
     "make-dir": "^3.1.0",
-    "methods": "^1.1.2",
+    "media-typer": "^0.3.0",
     "memory-pager": "^1.5.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.51.0",
     "mime-types": "^2.1.34",
+    "minimatch": "^3.0.4",
     "minipass": "^3.1.5",
     "minizlib": "^2.1.2",
-    "mime-db": "^1.51.0",
-    "merge-descriptors": "^1.0.1",
     "mkdirp": "^1.0.4",
-    "minimatch": "^3.0.4",
-    "negotiator": "^0.6.2",
+    "mongodb": "^4.1.4",
     "mongodb-connection-string-url": "^2.2.0",
+    "mongoose": "^6.0.14",
     "mpath": "^0.8.4",
     "mquery": "^4.0.0",
-    "mongoose": "^6.0.14",
-    "mongodb": "^4.1.4",
     "ms": "^2.0.0",
+    "negotiator": "^0.6.2",
     "node-addon-api": "^3.2.1",
     "node-fetch": "^2.6.6",
-    "object-assign": "^4.1.1",
+    "nopt": "^5.0.0",
     "npmlog": "^6.0.0",
+    "object-assign": "^4.1.1",
+    "on-finished": "^2.3.0",
     "once": "^1.4.0",
     "parseurl": "^1.3.3",
-    "nopt": "^5.0.0",
     "path-is-absolute": "^1.0.1",
-    "on-finished": "^2.3.0",
     "path-to-regexp": "^0.1.7",
+    "proxy-addr": "^2.0.7",
     "punycode": "^2.1.1",
+    "qs": "^6.7.0",
     "range-parser": "^1.2.1",
     "raw-body": "^2.4.0",
-    "proxy-addr": "^2.0.7",
-    "qs": "^6.7.0",
-    "regexp-clone": "^1.0.0",
-    "safer-buffer": "^2.1.2",
-    "safe-buffer": "^5.1.2",
-    "saslprep": "^1.0.3",
-    "serve-static": "^1.14.1",
     "readable-stream": "^3.6.0",
-    "semver": "^7.3.5",
-    "setprototypeof": "^1.1.1",
+    "regexp-clone": "^1.0.0",
     "rimraf": "^3.0.2",
+    "safe-buffer": "^5.1.2",
+    "safer-buffer": "^2.1.2",
+    "saslprep": "^1.0.3",
+    "semver": "^7.3.5",
     "send": "^0.17.1",
+    "serve-static": "^1.14.1",
     "set-blocking": "^2.0.0",
-    "sparse-bitfield": "^3.0.3",
-    "streamsearch": "^0.1.2",
-    "statuses": "^1.5.0",
+    "setprototypeof": "^1.1.1",
     "sift": "^13.5.2",
+    "signal-exit": "^3.0.6",
     "sliced": "^1.0.1",
+    "sparse-bitfield": "^3.0.3",
+    "statuses": "^1.5.0",
+    "streamsearch": "^0.1.2",
+    "string_decoder": "^1.3.0",
     "string-width": "^4.2.3",
     "strip-ansi": "^6.0.1",
-    "signal-exit": "^3.0.6",
-    "string_decoder": "^1.3.0",
-    "tr46": "^3.0.0",
+    "tar": "^6.1.11",
     "toidentifier": "^1.0.0",
-    "util-deprecate": "^1.0.2",
+    "tr46": "^3.0.0",
     "type-is": "^1.6.18",
     "unpipe": "^1.0.0",
-    "webidl-conversions": "^7.0.0",
-    "tar": "^6.1.11",
-    "vary": "^1.1.2",
-    "wrappy": "^1.0.2",
+    "util-deprecate": "^1.0.2",
     "utils-merge": "^1.0.1",
+    "vary": "^1.1.2",
+    "webidl-conversions": "^7.0.0",
     "whatwg-url": "^11.0.0",
-    "yallist": "^4.0.0",
-    "wide-align": "^1.1.5"
+    "wide-align": "^1.1.5",
+    "wrappy": "^1.0.2",
+    "yallist": "^4.0.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -154,5 +153,8 @@
   "bugs": {
     "url": "https://github.com/EmilioC/Backend_Node_1/issues"
   },
-  "homepage": "https://github.com/EmilioC/Backend_Node_1#readme"
+  "homepage": "https://github.com/EmilioC/Backend_Node_1#readme",
+  "devDependencies": {
+    "@types/mongoose": "^5.11.97"
+  }
 }
