--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
   },
   "homepage": "https://github.com/EmilioC/Backend_Node_1#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97"
   }
 }
