--- a/package.json
+++ b/package.json
@@ -157,7 +157,11 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.2.0",
     "@types/jsonwebtoken": "^8.5.6",
-    "@types/mongoose": "^5.11.97"
+    "@types/mongoose": "^5.11.97",
+    "@types/uniqid": "^5.3.1",
+    "n": "^8.0.1",
+    "uniqid": "^5.4.0"
   }
 }
